--- a/src/app/index.html
+++ b/src/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
   </head>
   <body>
-    <a href="./app/index.html"></a>
-    <script src="devtools.ts"></script>
+    <div id="app"></div>
+    <script src="script.tsx"></script>
   </body>
 </html>
