--- a/src/app/index.html
+++ b/src/app/index.html
@@ -2,6 +2,17 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <style>
+      html {
+        font-family: sans-serif;
+      }
+      html, body, #app {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
