--- a/src/app/index.html
+++ b/src/app/index.html
@@ -12,6 +12,12 @@
         margin: 0;
         padding: 0;
       }
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #000;
+          color: white;
+        }
+      }
     </style>
   </head>
   <body>
