Further enhancements and improvements

--- a/src/app/index.html
+++ b/src/app/index.html
@@ -5,6 +5,7 @@
     <style>
       html {
         font-family: sans-serif;
+        font-size: 14px;
       }
       html, body, #app {
         height: 100%;
